--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
             }
         }
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
     productFlavors {
     }
 }
@@ -52,8 +57,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.3.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     compile 'com.jakewharton:butterknife:8.7.0'
+    compile 'com.facebook.fresco:fresco:0.11.0'
+    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.11.0'
+    compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.1.3'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
-    compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.1.3'
+    compile project(path: ':rxretrofitlibrary')
 }
