--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <!-- Android6.0 蓝牙扫描才需要-->
+    <!-- Android6.0 蓝牙扫描才需要 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-feature
@@ -15,21 +15,27 @@
         android:required="true" />
 
     <application
+        android:name=".HHApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".DeviceControlActivity"/> >
+        <activity android:name=".HHDevicesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DeviceControlActivity"></activity>
-        <service android:name="com.hhit.hhble.Service.BluetoothLeService" android:enabled="true"/>
+
+        <service
+            android:name=".util.BluetoothLeService"
+            android:enabled="true" />
 
     </application>
 
